CSS fix
The right sidebar was broken on the user and admin homepages. This fixed them.

--- a/resources/pages.css
+++ b/resources/pages.css
@@ -17,7 +17,7 @@ header {
   position: fixed;
   top: 0;
   width: calc(100% - 40px);
-  z-index: 1000;
+  z-index: auto;
 
   padding: 10px 20px;
   background-color: #fff;
@@ -57,7 +57,7 @@ header {
   background-color: white;
   box-shadow: 0 8px 16px rgba(0,0,0,0.2);
   min-width: 160px;
-  z-index: 1;
+  z-index: auto;
 }
 
 .show {
